# AAM_BACKUP_V1

./: .gitignore  260  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  DEPLOYMENT_GUIDE.html  DEPLOYMENT_GUIDE.md  EDGE_CASE_AUDIT.md  IMPLEMENTATION_PLAN.md  ISSUES.md  LINE_BY_LINE_REVIEW.md  MANUAL_CODE_REVIEW.md  PREFECT_ARCHITECTURE.md  PREFECT_AUDIT.md  REVIEW.md  SYSTEM_DICTIONARY.md  TODO.md  WINDOWS_LEARNINGS.md  WINDOWS_SERVER_2016_FINDINGS.md  _robo_debug.py  _robo_debug2.py  collect_config_data.py  config.example.yaml  config.yaml  find_emojis.py  flow.py  launch.py  launch_test.bat  print_emojis.py  pyproject.toml  query  serve.py  start.bat  start_production.bat  start_server.bat  test_cloud.py  test_extreme.py  test_lan.py  test_long_error.py  (+6 more)
.planning/: PLAN-VERIFICATION.md  PROJECT.md  STATE.md  VERIFICATION.md  continue-here.md
archive/: .coverage  ISSUES.md  diff.txt  production_hardening_review_final.md  query  start.bat
aud/: aud1.md  aud2.md  aud3.md  aud4.md  aud5.md  aud6.md  aud7.md
client server data/: config.yaml  server_discovery_report.md
core/: backup_repository.py  cloud_preflight.py  cloud_reporter.py  cloud_sync.py  cloud_verify.py  fy_rollover.py  fy_router.py  hashing.py  health.py  lan_manifest.py  lan_preflight.py  lan_sync.py  logging.py  manifest.py  process.py  rclone_config.py  report.py  shutdown.py  subprocess_util.py  time_utils.py  wol.py
deploy/: 01_server_discovery.ps1  02_collect_config.ps1  03_setup_system.bat  04_check_readiness.ps1  05_test_config.bat  06_install_services.ps1  07_restart_services.bat  08_uninstall_services.bat  collect_config.ps1  download_nssm.ps1  download_nssm.py  gcs_lifecycle.json  install_services.bat  install_services.ps1  read_config.py  restart_services.bat  serve.py  server_discovery.bat  server_discovery.ps1  (+7 more)
(+88 files in other folders)
