[project]
name = "aam-backup-automation"
version = "1.0.0"
description = "AAM Backup Automation — nightly backup via Robocopy (LAN) and Rclone (GCS), orchestrated by Prefect 3"
readme = "IMPLEMENTATION_PLAN.md"
requires-python = ">=3.12"
authors = [{ name = "AAM Associates" }]

dependencies = [
    "prefect>=3.4.0",
    "pydantic>=2.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0",
    "wakeonlan>=3.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
