[project]
name = "aam-backup-automation"
version = "1.0.0"
description = "AAM Backup Automation — nightly backup via Robocopy (LAN) and Rclone (GCS), orchestrated by Prefect 3"
readme = "DEPLOYMENT_GUIDE.md"
requires-python = ">=3.12"
authors = [{ name = "AAM Associates" }]
classifiers = ["Operating System :: Microsoft Windows"]

dependencies = [
    "prefect==3.7.2",
    "pydantic==2.13.4",
    "loguru==0.7.3",
    "pyyaml==6.0.3",
    "wakeonlan==3.3.0",
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "httpx==0.28.1",
    "pendulum==3.2.0",
    "psutil==7.2.2",
    "ruamel.yaml==0.19.1",
    "humanize==4.15.0",
    "python-multipart==0.0.32",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
